--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 
+	<img src="assets/imgs/background/seed.svg" class="seed-bg1">
 <!-- Nav -->
 <nav class="navbar navbar-expand-lg navbar-light white">
   	<a class="navbar-brand" href="index.html">
@@ -72,7 +73,7 @@
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
-					<a href="#information" class="btnGreenHome">Saiba Mais</a>
+					<a href="#information" class="btnGreenHome">Nossos produtos</a>
 				</div>
 			</div>
 		</div>
@@ -86,9 +87,9 @@
 			<div class="col-12 col-md-12 col-xl-12 infomationDesktop">
 				<div class="row">
 					<div class="col-6 col-md-6 col-xl-6 textHomeDesk">
-						<h3 class="cor87">Visão</h3>
-					    <p class="cor87">
-					    	Ser referência brasileira como uma empresa de excelência em sementes para pastagem e adubação verde, que promove desenvolvimento para a sociedade rural e que as pessoas tenham orgulho de trabalhar. 
+						<h3 class="values-title cor87">Visão</h3>
+					    <p class="values-p cor87">
+					    	Ser referência brasileira como uma empresa de excelência em sementes para pastagem e adubação verde, que promove desenvolvimento para a sociedade rural e que as pessoas tenham orgulho de trabalhar.
 						</p>
 					</div>
 					<div class="col-6 col-md-6 col-xl-6">
@@ -102,22 +103,22 @@
 					    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao">
 					</div>
 					<div class="col-6 col-md-6 col-xl-6 textHomeDesk">
-						<h3 class="cor87">Missão</h3>
-					    <p class="cor87">
+						<h3 class="values-title cor87">Missão</h3>
+					    <p class="values-p cor87">
 					    	Atender às necessidades do mercado de sementes, com novas tecnologias, genéticas, eficiência e integraçã, objetivando melhorar a rentabilidade dos nossos clientes. 
 					    </p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-6 col-md-6 col-xl-6 textHomeDesk">
-						<h3 class="cor87">Valores</h3>
-					    <p class="cor87">
+						<h3 class="values-title cor87">Valores</h3>
+					    <p class="values-p cor87">
 					    	<ul class="listIndex">
-				    		<p class="cor87">Reconhecimento de nossos colaboradores.</p>
-				    		<p class="cor87">Ética nas relações comerciais.</p>
-				    		<p class="cor87">Foco no relacionamento e comprometimento.</p>
-				    		<p class="cor87">Aperfeiçõamento profissional.</p>
-				    		<p class="cor87">Agilidade, flexibilidade e criatividade.</p>
+				    		<p class="values-p cor87">Reconhecimento de nossos colaboradores.</p>
+				    		<p class="values-p cor87">Ética nas relações comerciais.</p>
+				    		<p class="values-p cor87">Foco no relacionamento e comprometimento.</p>
+				    		<p class="values-p cor87">Aperfeiçõamento profissional.</p>
+				    		<p class="values-p cor87">Agilidade, flexibilidade e criatividade.</p>
 				    	</ul>
 					    </p>
 					</div>
@@ -195,7 +196,7 @@
 				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
 			</div>
 			<div class="col-6 col-md-6 col-xl-6">
-				<h2 class="titleContent">Contato</h2>
+				<h2 class="titleContent form-title">Contato</h2>
 				<form action="contato.php" method="POST">
 				  	<div class="form-row">
 					    <div class="form-group col-12">
@@ -247,7 +248,7 @@
 			<div class="col-md-12 col-xl-12">
 				<h3 class="titleFooter">Onde estamos?</h3>
 				<p class="textFooter">
-					Rua Lolita Sanches Pretel, 1001<br/>
+					<b>Rua Lolita Sanches Pretel, 1001</b><br/>
 					Santo Anastácio -SP
 				</p>
 			</div>
@@ -328,6 +329,7 @@
 			</div>
 			<div class="col-6 col-lg-6 col-xl-6">
 				<ul class="navFooter">
+					<p>Empresa</p>
 					<li><a href="index.html" class="navFooter footerActive">Home</a></li>
 					<li><a href="produtos.html" class="navFooter">Produtos</a></li>
 					<li><a href="parceiro.html" class="navFooter">Seja nosso parceiro</a></li>
