--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 			<div class="col-6 col-lg-6 col-xl-6">
 				<ul class="navFooter">
 					<p>Empresa</p>
-					<li><a href="index.html" class="navFooter footerActive">Home</a></li>
+					<li><a href="index.html" class="navFooter">Home</a></li>
 					<li><a href="produtos.html" class="navFooter">Produtos</a></li>
 					<li><a href="parceiro.html" class="navFooter">Seja nosso parceiro</a></li>
 					<li><a href="contato.html" class="navFooter">Contato</a></li>
