Mudança de conteudo html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 	<!-- Meta Tag's -->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
+	<meta name="description" content="Você está procurando sementes forrageiras para sua pastagem? Então conheça a DuValle Sementes, alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas">
+	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, semente para pastagem">
+	<meta property="publisher" content="DuValle Sementes - Sementes Forrageiras para Pastagem">
 	<meta property="og:locale" content="pt_BR">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="DuValle">
+	<meta property="og:type" content="company">
+	<meta property="og:country-name" content="Brasil">
+	<meta property="og:title" content="	DuValle Sementes - Conheça agora mesmo nossa página e faça uma cotação - ">
 	<meta property="og:site_name" content="DuValle">
+	<meta property="og:url" content="http://duvalle.agr.com/">
+	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
+	<meta property="og:description" content="Esta procurando por sementes forrageiras? Então conheça a DuValle Sementes, temos como objetivo a produtividade de sua pastagem">
 	<link rel="icon" href="assets/imgs/logos/favicon.png">
 	<!-- Bootstrap -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -24,8 +29,8 @@
 <!-- Nav -->
 <nav class="navbar navbar-expand-lg navbar-light white">
   	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/icons/white/logo-icon-white.svg">
-		<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg">
+		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+		<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
   	<a class="navbar-toggler navbarItem navbarHome" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
@@ -49,13 +54,13 @@
 	      </li>
 	      <li class="nav-item text-center navContato">
 			<a href="mailto:duvalle@duvalle.agr.br">
-			  	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg">
+			  	<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg" alt="Email para contato com a DuValle Sementes">
 			</a>
 			<a href="tel:+551832634272">
-			  	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo">
+			  	<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo" alt="Telefone para contato com a DuValle Sementes">
 			</a>
 			<a href="https://wa.me/+5518996613390">
-			  	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg">
+			  	<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg" alt="WhatsApp para contato com a DuValle Sementes">
 			</a>
 
 	      	<p class="navbarCopy">Copyright &copy; 2019 DuValle</p>
@@ -93,14 +98,14 @@
 						</p>
 					</div>
 					<div class="col-6 col-md-6 col-xl-6">
-						<img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsVisao">
-						<img src="assets/imgs/pictures/visao.jpg" class="imgHome">
+						<img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsVisao" alt="Visão da DuValle Sementes">
+						<img src="assets/imgs/pictures/visao.jpg" class="imgHome" alt="Visão da DuValle Sementes">
 					</div> 
 				</div>
 				<div class="row">
 					<div class="col-6 col-md-6 col-xl-6">
-					    <img src="assets/imgs/pictures/missao.jpg" class="imgHome" style="float: right;">
-					    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao">
+					    <img src="assets/imgs/pictures/missao.jpg" class="imgHome" style="float: right;" alt="Missão da DuValle Sementes">
+					    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao" alt="Missão da DuValle Sementes">
 					</div>
 					<div class="col-6 col-md-6 col-xl-6 textHomeDesk">
 						<h3 class="values-title cor87">Missão</h3>
@@ -123,8 +128,8 @@
 					    </p>
 					</div>
 					<div class="col-6 col-md-6 col-xl-6">
-					    <img src="assets/imgs/pictures/valores.jpg" class="imgHome">
-				    <img src="assets/imgs/overlay/seeds-pattern-2.svg" class="seedsValores">
+					    <img src="assets/imgs/pictures/valores.jpg" class="imgHome" alt="Valores da DuValle Sementes">
+				    	<img src="assets/imgs/overlay/seeds-pattern-2.svg" class="seedsValores" alt="Valores da DuValle Sementes">
 					</div>
 				</div>
 			</div>
@@ -141,15 +146,15 @@
 				    <p>
 				    	Ser referência brasileira como uma empresa de excelência em sementes para pastagem e adubação verde, que promove desenvolvimento para a sociedade rural e que as pessoas tenham orgulho de trabalhar. 
 					</p>
-					<img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsVisao">
-					<img src="assets/imgs/pictures/visao.jpg" class="imgHome">
+					<img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsVisao" alt="Visão da DuValle Sementes">
+					<img src="assets/imgs/pictures/visao.jpg" class="imgHome" alt="Visão da DuValle Sementes">
 				  </div> 
 				  <div id="missao" class="tab-pane fade">
 				    <p>
 				    	Atender às necessidades do mercado de sementes, com novas tecnologias, genéticas, eficiência e integraçã, objetivando melhorar a rentabilidade dos nossos clientes. 
 				    </p>
-				    <img src="assets/imgs/pictures/missao.jpg" class="imgHome" style="float: right;">
-				    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao">
+				    <img src="assets/imgs/pictures/missao.jpg" class="imgHome" style="float: right;" alt="Missão da DuValle Sementes">
+				    <img src="assets/imgs/overlay/seeds-pattern-1.svg" class="seedsMissao" alt="Missão da DuValle Sementes">
 				  </div>
 				  <div id="valores" class="tab-pane fade">
 				    <p>
@@ -161,8 +166,8 @@
 				    		<p>Agilidade, flexibilidade e criatividade.</p>
 				    	</ul> 
 				    </p>
-				    <img src="assets/imgs/pictures/valores.jpg" class="imgHome">
-				    <img src="assets/imgs/overlay/seeds-pattern-2.svg" class="seedsValores">
+				    <img src="assets/imgs/pictures/valores.jpg" class="imgHome" alt="Valores da DuValle Sementes">
+				    <img src="assets/imgs/overlay/seeds-pattern-2.svg" class="seedsValores" alt="Valores da DuValle Sementes">
 				  </div>
 				</div>
 			</div>
@@ -261,7 +266,7 @@
 						<h3 class="footerText">
 							Sua pastagem do seu jeito.
 						</h3>
-						<img src="assets/imgs/logos/logo-w-text-white.svg" class="footerLogo">
+						<img src="assets/imgs/logos/logo-w-text-white.svg" class="footerLogo" alt="Logo com texto da DuValle Sementes">
 					</div>
 			</div>
 		</div>
@@ -272,22 +277,22 @@
 				<ul class="footerList">
 					<li>
 						<a href="index.html">
-							<img src="assets/imgs/logos/logo-w-text.svg">
+							<img src="assets/imgs/logos/logo-w-text.svg" alt="Logo com texto da DuValle Sementes">
 						</a>
 					</li>
 					<li>
 						<a href="https://wa.me/+5518996613390">
-							<img src="assets/imgs/icons/green/whatsapp-icon-green.svg">
+							<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" alt="WhatsApp para contato com a DuValle Sementes">
 						</a>
 					</li>
 					<li>
 						<a href="tel:+551832634272">
-							<img src="assets/imgs/icons/green/phone-icon.svg">
+							<img src="assets/imgs/icons/green/phone-icon.svg" alt="Telefone para contato com a DuValle Sementes">
 						</a>	
 					</li>
 					<li>
 						<a href="mailto:duvalle@duvalle.agr.br">
-							<img src="assets/imgs/icons/green/email-icon.svg">
+							<img src="assets/imgs/icons/green/email-icon.svg" alt="Email para contato com a DuValle Sementes">
 						</a>
 					</li>
 				</ul>
@@ -310,20 +315,20 @@
 	<div class="container footerDesktop footerCaixaLogos">
 		<div class="row">
 			<div class="col-6 col-lg-6 col-xl-6">
-				<img src="assets/imgs/logos/logo-w-text.svg" style="width: 184px;">
+				<img src="assets/imgs/logos/logo-w-text.svg" style="width: 184px;" alt="Logo com texto da DuValle Sementes">
 				<p class="textFooter">
 					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
 					Santo Anastácio - São Paulo, Brasil
 				</p>
 				<ul class="listFooter">
 					<li class="footerItemPadding">
-						<a href="mailto:duvalle@duvalle.agr.br"><img src="assets/imgs/icons/green/email-icon.svg" class="footerImage"></a>
+						<a href="mailto:duvalle@duvalle.agr.br"><img src="assets/imgs/icons/green/email-icon.svg" class="footerImage" alt="Email de contato da DuValle Sementes"></a>
 					</li>
 					<li class="footerItemPadding">
-						<a href="tel:+551832634272"><img src="assets/imgs/icons/green/phone-icon.svg" class="footerImage"></a>
+						<a href="tel:+551832634272"><img src="assets/imgs/icons/green/phone-icon.svg" class="footerImage" alt="Telefone de contato da DuValle Sementes"></a>
 					</li>
 					<li class="footerItemPadding">
-						<a href="https://wa.me/+5518996613390"><img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="footerImage"></a>
+						<a href="https://wa.me/+5518996613390"><img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="footerImage" class="WhatsApp da DuValle Sementes"></a>
 					</li>
 				</ul>
 			</div>
