--- a/produtos.html
+++ b/produtos.html
@@ -4,12 +4,17 @@
 	<!-- Meta Tag's -->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
+	<meta name="description" content="Você está procurando sementes forrageiras para sua pastagem? Então conheça a DuValle Sementes, alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas">
+	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, semente para pastagem">
+	<meta property="publisher" content="DuValle Sementes - Sementes Forrageiras para Pastagem">
 	<meta property="og:locale" content="pt_BR">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="DuValle">
+	<meta property="og:type" content="company">
+	<meta property="og:country-name" content="Brasil">
+	<meta property="og:title" content="	DuValle Sementes - Conheça agora mesmo nossa página e faça uma cotação - ">
 	<meta property="og:site_name" content="DuValle">
+	<meta property="og:url" content="http://duvalle.agr.com/">
+	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
+	<meta property="og:description" content="Esta procurando por sementes forrageiras? Então conheça a DuValle Sementes, temos como objetivo a produtividade de sua pastagem">
 	<link rel="icon" href="assets/imgs/logos/favicon.png">
 	<!-- OWL Carousel -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -26,8 +31,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
   	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo logoMobile" src="assets/imgs/logos/logo-green.svg">
-		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg">
+		<img class="imgSvgLogo logoMobile" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
   	<a class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
@@ -106,133 +111,133 @@
 				<ul class="productsList">
 					<li class="productsItem verao">
 						<a href="produtos/andropogon.html">
-							<img src="assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/andropogon.jpg" class="img-fluid imgProduct" alt="Semente Andropogon">
 							<span class="btnGreen buttonPadrao">Andropogon</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/aruana.html">
-							<img src="assets/imgs/produtos/aruana.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/aruana.jpg" class="img-fluid imgProduct" alt="Semente Aruana">
 							<span class="btnGreen buttonPadrao">Aruana</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/llanero.html">
-							<img src="assets/imgs/produtos/llanero.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/llanero.jpg" class="img-fluid imgProduct" alt="Semente Llanero">
 							<span class="btnGreen buttonPadrao">Llanero</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/decumbens.html">
-							<img src="assets/imgs/produtos/decumbens.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/decumbens.jpg" class="img-fluid imgProduct"  alt="Semente Decumbens">
 							<span class="btnGreen buttonPadrao">Decumbens</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/humidicola.html">
-							<img src="assets/imgs/produtos/humidicola.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/humidicola.jpg" class="img-fluid imgProduct"	alt="Semente Humidícola">
 							<span class="btnGreen buttonPadrao">Humidícola</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/mg-4.html">
-							<img src="assets/imgs/produtos/mg-4.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/mg-4.jpg" class="img-fluid imgProduct" alt="Semente MG-4">
 							<span class="btnGreen buttonPadrao">MG - 4</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/ruziziensis.html">
-							<img src="assets/imgs/produtos/ruziziensis.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/ruziziensis.jpg" class="img-fluid imgProduct" alt="Semente Ruziziensis">
 							<span class="btnGreen buttonPadrao">Ruziziensis</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/mg-5.html">
-							<img src="assets/imgs/produtos/mg-5.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/mg-5.jpg" class="img-fluid imgProduct" alt="Semente MG-5">
 							<span class="btnGreen buttonPadrao">MG - 5</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/batatais.html">
-							<img src="assets/imgs/produtos/batatais.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/batatais.jpg" class="img-fluid imgProduct" alt="Semente Batatais">
 							<span class="btnGreen buttonPadrao">Batatais</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/massai.html">
-							<img src="assets/imgs/produtos/massai.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/massai.jpg" class="img-fluid imgProduct" alt="Semente Massai">
 							<span class="btnGreen buttonPadrao">Massai</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/milheto.html">
-							<img src="assets/imgs/produtos/milheto.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/milheto.jpg" class="img-fluid imgProduct" alt="Semente Milheto">
 							<span class="btnGreen buttonPadrao">Milheto</span>
 						</a>	
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/mombaca.html">
-							<img src="assets/imgs/produtos/mombaca.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/mombaca.jpg" class="img-fluid imgProduct" alt="Semente Mombaça">
 							<span class="btnGreen buttonPadrao">Mombaça</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/pensacola.html">
-							<img src="assets/imgs/produtos/pensacola.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/pensacola.jpg" class="img-fluid imgProduct" alt="Semente Pensacola">
 							<span class="btnGreen buttonPadrao">Pensacola</span>
 						</a>
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/pojuca.html">
-							<img src="assets/imgs/produtos/pojuca.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/pojuca.jpg" class="img-fluid imgProduct" alt="Semente Pojuca">
 							<span class="btnGreen buttonPadrao">Pojuca</span>
 						</a>	
 					</li>
 					<li class="productsItem verao">
 						<a href="produtos/tanzania.html">
-							<img src="assets/imgs/produtos/tanzania.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/tanzania.jpg" class="img-fluid imgProduct" alt="Semente Tanzânia">
 							<span class="btnGreen buttonPadrao">Tanzânia</span>
 						</a>
 					</li>
 					<li class="productsItem inverno">
 						<a href="produtos/aveia-preta.html">
-							<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/aveia-preta.jpg" class="img-fluid imgProduct" alt="Semente Aveia Preta">
 							<span class="btnGreen buttonPadrao">Aveia Preta</span>
 						</a>
 					</li>
 					<li class="productsItem inverno">
 						<a href="produtos/azevem.html">
-							<img src="assets/imgs/produtos/azevem.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/azevem.jpg" class="img-fluid imgProduct" alt="Semente Azevém">
 							<span class="btnGreen buttonPadrao">Azevém</span>
 						</a>
 					</li>
 					<li class="productsItem leguminosas">
 						<a href="produtos/crotalaria-juncea.html">
-							<img src="assets/imgs/produtos/crotalaria-juncea.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/crotalaria-juncea.jpg" class="img-fluid imgProduct" alt="Semente Crotalária Juncea">
 							<span class="btnGreen buttonPadrao">Crotalária Juncea</span>
 						</a>
 					</li>
 					<li class="productsItem leguminosas">
 						<a href="produtos/estilosantes-campo-grande.html">
-							<img src="assets/imgs/produtos/estilosantes-campo-grande.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/estilosantes-campo-grande.jpg" class="img-fluid imgProduct" alt="Semente Estilozantes Campo Grande">
 							<span class="btnGreen buttonPadrao">Estilozantes Campo Grande</span>
 						</a>
 					</li>
 					<li class="productsItem leguminosas">
 						<a href="produtos/feijao-de-porco.html">	
-							<img src="assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid imgProduct" alt="Semente Feijão de Porco">
 							<span class="btnGreen buttonPadrao">Feijão de Porco</span>
 						</a>
 					</li>
 					<li class="productsItem leguminosas">
 						<a href="produtos/leucena.html">
-							<img src="assets/imgs/produtos/leucena.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/leucena.jpg" class="img-fluid imgProduct" alt="Semente Leucena">
 							<span class="btnGreen buttonPadrao">Leucena</span>
 						</a>
 					</li>
 					<li class="productsItem leguminosas">
 						<a href="produtos/mucuna-preta.html">
-							<img src="assets/imgs/produtos/mucuna-preta.jpg" class="img-fluid imgProduct">
+							<img src="assets/imgs/produtos/mucuna-preta.jpg" class="img-fluid imgProduct" alt="Semente Mucuna Preta">
 							<span class="btnGreen buttonPadrao">Mucuna Preta</span>
 						</a>
 					</li>
