--- a/produtos/feijao-de-porco.html
+++ b/produtos/feijao-de-porco.html
@@ -4,13 +4,18 @@
 	<!-- Meta Tag's -->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
+	<meta name="description" content="Você está procurando sementes forrageiras para sua pastagem? Então conheça a DuValle Sementes, alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas">
+	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, semente para pastagem">
+	<meta property="publisher" content="DuValle Sementes - Sementes Forrageiras para Pastagem">
 	<meta property="og:locale" content="pt_BR">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="DuValle">
+	<meta property="og:type" content="company">
+	<meta property="og:country-name" content="Brasil">
+	<meta property="og:title" content="	DuValle Sementes - Conheça agora mesmo nossa página e faça uma cotação - ">
 	<meta property="og:site_name" content="DuValle">
-	<link rel="icon" href="../assets/imgs/logos/favicon.png">
+	<meta property="og:url" content="http://duvalle.agr.com/">
+	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
+	<meta property="og:description" content="Esta procurando por sementes forrageiras? Então conheça a DuValle Sementes, temos como objetivo a produtividade de sua pastagem">
+	<link rel="icon" href="assets/imgs/logos/favicon.png">
 	<!-- Bootstrap -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- CSS Main -->
@@ -23,8 +28,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
   	<a class="navbar-brand" href="../index.html">
-		<img class="imgSvgLogo logoMobile" src="../assets/imgs/logos/logo-green.svg">
-		<img class="imgSvgLogo logoDesktop" src="../assets/imgs/logos/logo-w-text.svg">
+		<img class="imgSvgLogo logoMobile" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
   	<a class="navbar-toggler navbarItem navbarProdutos" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
@@ -72,11 +77,11 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
-				<img src="../assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid imgProductItem">
+				<img src="../assets/imgs/produtos/feijao-de-porco.jpg" class="img-fluid imgProductItem" alt="Semente Feijão de Porco">
 				<table class="table">
 				  <thead>
 				    <tr>
-				      <th scope="col"><h3 class="titleProduct">Feijã de Porco</h3></th>
+				      <th scope="col"><h3 class="titleProduct">Feijão de Porco</h3></th>
 				    </tr>
 				  </thead>
 				  <tbody>
