--- a/contato.html
+++ b/contato.html
@@ -72,7 +72,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
-				<h2 class="titleContent">Contato</h2>
+				<h2 class="titleContent titleBlack">Contato</h2>
 				<form action="contato.php" method="POST">
 				  <div class="form-row">
 				    <div class="form-group col-12">
