--- a/parceiro.html
+++ b/parceiro.html
@@ -72,7 +72,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
-				<h2 class="titleContent">Seja nosso parceiro</h2>
+				<h2 class="titleContent titleBlack">Seja nosso parceiro</h2>
 				<form action="parceiro.php" method="POST">
 					<label class="txtLabelForm">Tipo</label>
 				  <div class="form-row">
