--- a/produtos.html
+++ b/produtos.html
@@ -75,7 +75,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<h2 class="titleContent">Produtos</h2>
+				<h2 class="titleContent titleBlack">Produtos</h2>
 			</div>
 		</div>
 		<div class="row footerMobile">
