--- a/produtos/andropogon.html
+++ b/produtos/andropogon.html
@@ -28,8 +28,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
   	<a class="navbar-brand" href="../index.html">
-		<img class="imgSvgLogo logoMobile" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
-		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
+		<img class="imgSvgLogo logoMobile" src="../assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+		<img class="imgSvgLogo logoDesktop" src="../assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
   	<a class="navbar-toggler navbarItem navbarProdutos" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
@@ -72,7 +72,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12">
-				<h2 class="titleContent">Andropogon</h2>
+				<h2 class="titleContent titleBlack">Andropogon</h2>
 			</div>
 		</div>
 		<div class="row">
