--- a/produtos/llanero.html
+++ b/produtos/llanero.html
@@ -28,8 +28,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
   	<a class="navbar-brand" href="../index.html">
-		<img class="imgSvgLogo logoMobile" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
-		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
+		<img class="imgSvgLogo logoMobile" src="../assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+		<img class="imgSvgLogo logoDesktop" src="../assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
   	<a class="navbar-toggler navbarItem navbarProdutos" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
