arrumando nav iphone

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
 		<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
-  	<a class="navbar-toggler navbarItem navbarHome" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+  	<a href="#" class="navbar-toggler navbarItem navbarHome" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
   		<span class="barraMid"></span>
   		<span class="barraBot"></span>
