--- a/cotar.html
+++ b/cotar.html
@@ -27,11 +27,11 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
-  	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo logoMobile" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+	<a class="navbar-brand" href="index.html">
+		<img class="imgSvgLogo logoMobile" src="assets/imgs/logos/logo-green.svg" alt="Logo da DuValle para dispositivos mobile">
 		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
-  	<a class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
+  	<a href="#" class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
   		<span class="barraMid"></span>
   		<span class="barraBot"></span>
