--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
 					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
-					<a href="#information" class="btnGreenHome">Nossos produtos</a>
+					<a href="produtos.html" class="btnGreenHome">Nossos produtos</a>
 				</div>
 			</div>
 		</div>
