--- a/contato.html
+++ b/contato.html
@@ -4,14 +4,18 @@
 	<!-- Meta Tag's -->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Você está procurando sementes forrageiras para sua pastagem? Então conheça a DuValle Sementes, alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas">
+	<meta name="description" content="DuValle Sementes tem como objetivo manter a alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas.">
 	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, semente para pastagem">
+	<meta property="og:image" content="http://duvalle.agr.br/assets/imgs/logos/logo-w-text.svg">
+	<meta property="og:image:type" content="image/svg">
+	<meta property="og:image:width" content="800"> 
+	<meta property="og:image:height" content="600">
 	<meta property="publisher" content="DuValle Sementes - Sementes Forrageiras para Pastagem">
 	<meta property="og:locale" content="pt_BR">
 	<meta property="og:type" content="company">
 	<meta property="og:country-name" content="Brasil">
 	<meta property="og:title" content="	DuValle Sementes - Conheça agora mesmo nossa página e faça uma cotação - ">
-	<meta property="og:site_name" content="DuValle">
+	<meta property="og:site_name" content="DuValle Sementes">
 	<meta property="og:url" content="http://duvalle.agr.com/">
 	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
 	<meta property="og:description" content="Esta procurando por sementes forrageiras? Então conheça a DuValle Sementes, temos como objetivo a produtividade de sua pastagem">
@@ -27,10 +31,12 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
-	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo logoMobile" src="assets/imgs/logos/logo-green.svg" alt="Logo da DuValle para dispositivos mobile">
-		<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
-  	</a>
+	<h1>
+		<a class="navbar-brand" href="index.html">
+			<img class="imgSvgLogo logoMobile" src="assets/imgs/logos/logo-green.svg" alt="Logo da DuValle para dispositivos mobile">
+			<img class="imgSvgLogo logoDesktop" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
+	  	</a>
+	</h1>
   	<a href="#" class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
   		<span class="barraMid"></span>
