--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 	<!-- Meta Tag's -->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Você está procurando sementes forrageiras para sua pastagem? Então conheça a DuValle Sementes, alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas">
+	<meta name="description" content="DuValle Sementes tem como objetivo manter a alta pureza e vigor em todas as variedades de sementes forrageiras e leguminosas.">
 	<meta name="keywords" content="sementes forrageiras, sementes de pastagem, duvalle, sementes, sementes para gado, grama para gado, semente para pastagem">
+	<meta property="og:image" content="http://duvalle.agr.br/assets/imgs/logos/logo-w-text.svg">
+	<meta property="og:image:type" content="image/svg">
+	<meta property="og:image:width" content="800"> 
+	<meta property="og:image:height" content="600">
 	<meta property="publisher" content="DuValle Sementes - Sementes Forrageiras para Pastagem">
 	<meta property="og:locale" content="pt_BR">
 	<meta property="og:type" content="company">
 	<meta property="og:country-name" content="Brasil">
 	<meta property="og:title" content="	DuValle Sementes - Conheça agora mesmo nossa página e faça uma cotação - ">
-	<meta property="og:site_name" content="DuValle">
+	<meta property="og:site_name" content="DuValle Sementes">
 	<meta property="og:url" content="http://duvalle.agr.com/">
 	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
 	<meta property="og:description" content="Esta procurando por sementes forrageiras? Então conheça a DuValle Sementes, temos como objetivo a produtividade de sua pastagem">
@@ -21,17 +25,19 @@
 	<!-- CSS Main -->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<!-- Title -->
-	<title>DuValle</title>
+	<title>DuValle Sementes</title>
 </head>
 <body>
 
-	<img src="assets/imgs/background/seed.svg" class="seed-bg1">
+	<img src="assets/imgs/background/seed.svg" class="seed-bg1" alt="Svg de sementes">
 <!-- Nav -->
 <nav class="navbar navbar-expand-lg navbar-light white">
-  	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
-		<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
-  	</a>
+	<h1>
+	  	<a class="navbar-brand" href="index.html">
+			<img class="imgSvgLogo logoMobileHome" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+			<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
+	  	</a>
+  	</h1>
   	<a href="#" class="navbar-toggler navbarItem navbarHome" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
   		<span class="barraMid"></span>
@@ -328,7 +334,7 @@
 						<a href="tel:+551832634272"><img src="assets/imgs/icons/green/phone-icon.svg" class="footerImage" alt="Telefone de contato da DuValle Sementes"></a>
 					</li>
 					<li class="footerItemPadding">
-						<a href="https://wa.me/+5518996613390"><img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="footerImage" class="WhatsApp da DuValle Sementes"></a>
+						<a href="https://wa.me/+5518996613390"><img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="footerImage" alt="WhatsApp da DuValle Sementes"></a>
 					</li>
 				</ul>
 			</div>
