--- a/produtos.html
+++ b/produtos.html
@@ -337,7 +337,7 @@
 	</div>
 </footer>
 
-
+<a href="#top" class="seta-top"><img src="assets/imgs/icons/green/arrow-icon.svg"></a>
 
 <!-- Jquery -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
