--- a/produtos/crotalaria-juncea.html
+++ b/produtos/crotalaria-juncea.html
@@ -19,7 +19,7 @@
 	<meta property="og:url" content="http://duvalle.agr.com/">
 	<meta name="author" content="Guilherme Augusto & Victor Maloyama">
 	<meta property="og:description" content="Esta procurando por sementes forrageiras? Então conheça a DuValle Sementes, temos como objetivo a produtividade de sua pastagem">
-	<link rel="icon" href="assets/imgs/logos/favicon.png">
+	<link rel="icon" href="../assets/imgs/logos/favicon.png">
 	<!-- Bootstrap -->
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- CSS Main -->
@@ -77,8 +77,8 @@
 <section id="product">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-md-12 col-sm-12">
-				<h2 class="titleContent">Crotalária Juncea</h2>
+			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
+				<h2 class="titleContent titleBlack">Crotalária Juncea</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -325,6 +325,8 @@
 		</div>
 	</div>
 </footer>
+
+<a href="#top" class="seta-top"><img src="../assets/imgs/icons/green/arrow-icon.svg"></a>
 
 <!-- Jquery -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
