--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 	        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
 	      </li>
 	      <li class="nav-item">
+	        <a class="nav-link white" href="cotar.html">Cotar</a>
+	      </li>
+	      <li class="nav-item">
 	        <a class="nav-link white" href="contato.html">Contato</a>
 	      </li>
 	      <li class="nav-item text-center navContato">
@@ -82,7 +85,7 @@
 			<div class="col-12 col-md-12 col-xl-7 imageHomeMobile">
 				<div class="contentHome">
 					<h2 class="titleHome">Conheça nossa <br/>linha de produtos!</h2>
-					<p>A Duvalle oferece uma grande <br/>variedade de sementes para gramados</p>
+					<p>A Duvalle oferece uma grande <br/>variedade de sementes para pastagem</p>
 					<a href="produtos.html" class="btnGreenHome">Nossos produtos</a>
 				</div>
 			</div>
@@ -196,14 +199,14 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="auto" height="auto" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3699.5794147183647!2d-51.65562638505077!3d-21.989099385486103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9493e0e86fbbb8a5%3A0x59966c2dc4c55305!2sR.+Lolita+Sanchez+Pretel%2C+1001%2C+Santo+Anast%C3%A1cio+-+SP%2C+19360-000!5e0!3m2!1spt-BR!2sbr!4v1566531812784!5m2!1spt-BR!2sbr" width="auto" height="auto" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
 	<div class="container footerDesktop">
 		<div class="row">
 			<div class="col-6 col-md-6 col-xl-6">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3699.5794147183647!2d-51.65562638505077!3d-21.989099385486103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9493e0e86fbbb8a5%3A0x59966c2dc4c55305!2sR.+Lolita+Sanchez+Pretel%2C+1001%2C+Santo+Anast%C3%A1cio+-+SP%2C+19360-000!5e0!3m2!1spt-BR!2sbr!4v1566531812784!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
 			</div>
 			<div class="col-6 col-md-6 col-xl-6">
 				<h2 class="titleContent form-title">Contato</h2>
@@ -331,6 +334,7 @@
 					</li>
 					<li class="footerItemPadding">
 						<a href="tel:+551832634272"><img src="assets/imgs/icons/green/phone-icon.svg" class="footerImage" alt="Telefone de contato da DuValle Sementes"></a>
+						<a href="tel:+551832634272"><p style="color: rgba(0, 0, 0, .56);position: absolute; left: 25px;">(18)3263-4272</p></a>
 					</li>
 					<li class="footerItemPadding">
 						<a href="https://wa.me/+5518996613390"><img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="footerImage" alt="WhatsApp da DuValle Sementes"></a>
