--- a/produtos/humidicola.html
+++ b/produtos/humidicola.html
@@ -53,6 +53,9 @@
 	        <a class="nav-link white" href="../produtos.html">Produtos</a>
 	      </li>
 	      <li class="nav-item">
+	        <a class="nav-link white" href="../cotar.html">Cotar</a>
+	      </li>
+	      <li class="nav-item">
 	        <a class="nav-link white" href="../parceiro.html">Seja nosso parceiro</a>
 	      </li>
 	      <li class="nav-item">
