--- a/parceiro.html
+++ b/parceiro.html
@@ -33,7 +33,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
   	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/logos/logo-green.svg" alt="Logo da DuValle para dispositivos mobile">
 		<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
   	<a class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
@@ -52,6 +52,9 @@
 	      </li>
 	      <li class="nav-item active">
 	        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="cotar.html">Cotar</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link white" href="contato.html">Contato</a>
@@ -214,16 +217,14 @@
 			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
 				<h3 class="titleFooter">Onde estamos?</h3>
 				<p class="textFooter">
-					UBS Santo Anastácio<br/>
-					Rodovia Raposo Tavares, Km 596,<br/>
-					Distrito Industrial<br/>
-					Cx.postal 93<br/>
+					Rua Lolita Sanches Pretel, 1001 | 19360-000<br/>
+					Santo Anastácio - São Paulo, Brasil
 				</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 col-md-12 col-sm-12 col-lg-6 col-xl-6 parceiroDesktop">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d29597.099408865317!2d-51.67809652025094!3d-21.986874371170558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sUBS+Santo+Anast%C3%A1cio+Rodovia+Raposo+Tavares%2C+Km+596%2C+Distrito+Industrial+Cx.postal+93!5e0!3m2!1spt-BR!2sbr!4v1565061726165!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3699.5794147183647!2d-51.65562638505077!3d-21.989099385486103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9493e0e86fbbb8a5%3A0x59966c2dc4c55305!2sR.+Lolita+Sanchez+Pretel%2C+1001%2C+Santo+Anast%C3%A1cio+-+SP%2C+19360-000!5e0!3m2!1spt-BR!2sbr!4v1566531812784!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border: 1px solid #707070; border-radius: 10px;" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
