--- a/produtos.html
+++ b/produtos.html
@@ -36,7 +36,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light green">
 	<a class="navbar-brand" href="index.html">
-		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/icons/white/logo-icon-white.svg" alt="Logo da DuValle para dispositivos mobile">
+		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/logos/logo-green.svg" alt="Logo da DuValle para dispositivos mobile">
 		<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
   	<a href="#" class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
@@ -55,6 +55,9 @@
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link white" href="parceiro.html">Seja nosso parceiro</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link white" href="cotar.html">Cotar</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link white" href="contato.html">Contato</a>
