--- a/produtos/ruziziensis.html
+++ b/produtos/ruziziensis.html
@@ -56,6 +56,9 @@
 	        <a class="nav-link white" href="../parceiro.html">Seja nosso parceiro</a>
 	      </li>
 	      <li class="nav-item">
+	        <a class="nav-link white" href="../cotar.html">Cotar</a>
+	      </li>
+	      <li class="nav-item">
 	        <a class="nav-link white" href="../contato.html">Contato</a>
 	      </li>
 	      <li class="nav-item text-center navContato">
