--- a/produtos/mombaca.html
+++ b/produtos/mombaca.html
@@ -36,6 +36,15 @@
 		<img class="imgSvgLogo logoMobile" src="../assets/imgs/logos/logo-green.svg" alt="Logo da DuValle para dispositivos mobile">
 		<img class="imgSvgLogo logoDesktop" src="../assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
+  	<a href="mailto:duvalle@duvalle.agr.br" class="navbarItem contatoNavEmail">
+  		<img src="../assets/imgs/icons/green/email-icon.svg" class="imgSvg" alt="Email para contato com a DuValle Sementes">
+  	</a>
+  	<a href="tel:+551832634272" class="navbarItem contatoNavPhone">
+  		<img src="../assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo" alt="Telefone para contato com a DuValle Sementes">
+  	</a>
+  	<a href="https://wa.me/+5518996613390" class="navbarItem contatoNavWhats">
+  		<img src="../assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg" alt="WhatsApp para contato com a DuValle Sementes">
+  	</a>
   	<a href="#" class="navbar-toggler navbarItem navbarProdutos" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
   		<span class="barraMid"></span>
