--- a/parceiro.html
+++ b/parceiro.html
@@ -36,6 +36,15 @@
 		<img class="imgSvgLogo logoMobileHome" src="assets/imgs/logos/logo-green.svg" alt="Logo da DuValle para dispositivos mobile">
 		<img class="imgSvgLogo logoDesktopHome" src="assets/imgs/logos/logo-w-text.svg" alt="Logo da DuValle para dispositivos desktop">
   	</a>
+  	<a href="mailto:duvalle@duvalle.agr.br" class="navbarItem contatoNavEmail">
+  		<img src="assets/imgs/icons/green/email-icon.svg" class="imgSvg" alt="Email para contato com a DuValle Sementes">
+  	</a>
+  	<a href="tel:+551832634272" class="navbarItem contatoNavPhone">
+  		<img src="assets/imgs/icons/green/phone-icon.svg" class="imgSvgLogo" alt="Telefone para contato com a DuValle Sementes">
+  	</a>
+  	<a href="https://wa.me/+5518996613390" class="navbarItem contatoNavWhats">
+  		<img src="assets/imgs/icons/green/whatsapp-icon-green.svg" class="imgSvg" alt="WhatsApp para contato com a DuValle Sementes">
+  	</a>
   	<a class="navbar-toggler navbarItem navbarRestante" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
   		<span class="barraTop"></span>
   		<span class="barraMid"></span>
@@ -84,17 +93,20 @@
 				<form action="parceiro.php" method="POST">
 					<label class="txtLabelForm">Tipo</label>
 				  <div class="form-row">
-				    <div class="form-group col-12">
-				    	<label class="btnFisicaLabel tipoClick buttonVerde" id="sla1">
+				    <div class="form-group col-6 btnFisicaLabel tipoClick buttonVerde">
+				    	<label>
 				    		Pessoa Física
 				    		<input type="radio" name="tipo" value="Física" class="btnFisica active" id="pessoaFisica" required="tipo" checked>
 				    	</label>
-				      	<label class="btnJuridicaLabel tipoClick" id="sla2">
+				   	</div>
+				   	<div class="form-group col-6 btnJuridicaLabel tipoClick">
+				      	<label>
 				      		Pessoa Jurídica
 				      		<input type="radio" name="tipo" value="Jurídica" class="btnJuridica" id="pessoaJuridica" required="tipo">
 						</label>
-				    </div>
-				  </div>
+					</div>
+				   </div>
+				  <!-- </div> -->
 				  <div class="form-row">
 				    <div class="form-group col-12">
 					  <label class="txtLabelForm" for="inputName" id="labelNome">Nome</label>
